--- a/ucp_pkw.html
+++ b/ucp_pkw.html
@@ -38,32 +38,34 @@
 
     <!-- banner / hero Start -->
     <section id="beranda">
-        <div class="hero-banner container-fluid p-5 text-white">
-            <div class="row mt-5">
-                <div class="col-md-6">
-                    <h1>Pizza Tasty</h1>
-                    <p>
+        <div class="hero-banner container-fluid p-5 ">
+            <div class="row mt-5 gy-5">
+                <div class="txt-home col-md-6">
+                    <img src="/Images/home.png" alt="menu" />
+                    <p class="title fw-bold fs-1 ">
+                        <h2>Pizza Tasty</h2>
+                    </p>
+                    <p class="fs-4 fst-normal">
                         Cobain Pizza terlaris minggu ini.
                     </p>
                     <button type="button" class="btn btn-primary text-white" onclick="window.location.href='#menu'">
                         Lihat Menu
                     </button>
                 </div>
-                <img style="border-radius: 100%;" src="menu.png" alt="menu"/>
-                <div class="col-md-6"></div>
             </div>
         </div>
     </section>
     <!-- banner / hero End -->
 
     <section id="section">
-        <div class="hero-banner container-fluid p-5 text-white">
-            <div class="row mt-5">
-                <div class="col-md-6">
-                    <h1>Tentang Kami</h1>
+        <div class="hero-banner container-fluid p-5 ">
+            <div class="row mt-5 gy-5">
+                <div class="txt-home col-md-6">
+                    <img src="/Images/about.jpg" alt="apps" />
                     <p>
-                        Kami menyediakan berbagai makanan enak
+                        Tentang Kami
                     </p>
+                    <h1>Kami menyediakan berbagai makanan enak</h1>
                     <p>
                         Kami memasak makanan terbaik di seluruh kota
                         dengan layanan pelanggan yang sangat baik
@@ -78,19 +80,44 @@
         </div>
     </section>
 
-    <section style="text-align : center;">
-        <div class="col-md-6">
-            <h1>Menu Minggu Ini</h1>
+    <section id="section">
+        <div class="hero-banner container-fluid p-5 ">
+            <div class="row mt-5 gy-5">
+                <div class="txt-home col-md-6">
+                    <img src="/Images/movil-app.png" alt="apps" />
+                    <p>
+                        Aplikasi
+                    </p>
+                    <h1>Aplikasi Tersedia !</h1>
+                    <p>
+                        Temukan aplikasi kami dan unduh, Anda dapat
+                        membuat reservaso, memesan makanan, melihat 
+                        pengiriman Anda di jalan dan banyak lagi.
+                    </p>
+                    <button type="button" class="btn btn-primary text-white" onclick="window.location.href='#menu'">
+                        Explore History
+                    </button>
+                </div>
+                <div class="col-md-6"></div>
+            </div>
         </div>
     </section>
 
     <!-- image card Start -->
     <section id="menu">
+    <section style="text-align : center;">
+        <div class="text-center">
+            <p>
+                Spesial
+            </p>
+            <h1 style="position: static;" >Menu Minggu Ini</h1>
+        </div>
+    </section>
         <div class="container">
             <div class="row mt-5 gy-5">
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img style="border-radius: 100%;" src="plate1.png" alt="">
+                        <img src="/Images/plate1.png" alt="menu1"/>
                         <div class="card-body">
                             <h5 class="card-title">Salad BBQ</h5>
                             <p class="card-text">
@@ -109,7 +136,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img style="border-radius: 100%;" src="plate2.png" alt="">
+                        <img src="/Images/plate2.png" alt="menu2">
                         <div class="card-body">
                             <h5 class="card-title">Salad with Fish</h5>
                             <p class="card-text">
@@ -128,7 +155,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img style="border-radius: 100%;" src="plate3.png" alt="">
+                        <img src="/Images/plate3.png" alt="menu3">
                         <div class="card-body">
                             <h5 class="card-title">Spinach Salad</h5>
                             <p class="card-text">
@@ -152,14 +179,17 @@
 
     <!-- Layanan Start  -->
     <section id="layanan" style="text-align : center;">
-        <div class="col-md-6">
+        <div class="text-center" >
+            <p>
+                Penawaran
+            </p>
             <h1>Our Amazing Services</h1>
         </div>    
         <div class="container">
             <div class="row mt-5 gy-5">
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img style="border-radius: 100%;" src="dish.svg" alt="">
+                        <img src="/Images/dish.svg" alt="dish">
                         <div class="card-body">
                             <h5 class="card-title">Makanan Enak</h5>
                             <p class="card-text">
@@ -171,7 +201,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img style="border-radius: 100%;" src="pizza.svg" alt="">
+                        <img src="/Images/pizza.svg" alt="pizza">
                         <div class="card-body">
                             <h5 class="card-title">Makanan Cepat Saji</h5>
                             <p class="card-text">
@@ -183,7 +213,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <div class="card mb-5">
-                        <img style="border-radius: 100%;" src="truck.svg" alt="">
+                        <img src="/Images/truck.svg" alt="truck">
                         <div class="card-body">
                             <h5 class="card-title">Pesan Antar</h5>
                             <p class="card-text">
@@ -200,9 +230,9 @@
 
     <!-- Contact Start -->
     <section id="contact-me">
-        <div class="hero-banner container-fluid p-5 text-white">
-            <div class="row mt-5">
-                <div class="col-md-6">
+        <div class="hero-banner container-fluid p-5 ">
+            <div class="row mt-5 gy-5">
+                <div class="txt-home col-md-6">
                     <h1 >Kontak Kami</h1>
                     <p>
                         Let's Talk
@@ -213,6 +243,9 @@
                     </p>
                 </div>
                 <div class="col-md-6"></div>
+                <div class="text-center">
+                    <button type="button" class="btn btn-primary text-white" onclick="window.location.href='#section'">Send Massage</button>
+                </div>    
             </div>
         </div>
     </section>
