--- a/ucp_pkw.html
+++ b/ucp_pkw.html
@@ -41,7 +41,6 @@
         <div class="hero-banner container-fluid p-5 ">
             <div class="row mt-5 gy-5">
                 <div class="txt-home col-md-6">
-                    <img src="/Images/home.png" alt="menu" />
                     <p class="title fw-bold fs-1 ">
                         <h2>Pizza Tasty</h2>
                     </p>
@@ -52,6 +51,9 @@
                         Lihat Menu
                     </button>
                 </div>
+                <div class="txt-home col-md-6">
+                    <img src="/Images/home.png" alt="menu" />
+                </div>    
             </div>
         </div>
     </section>
@@ -61,7 +63,6 @@
         <div class="hero-banner container-fluid p-5 ">
             <div class="row mt-5 gy-5">
                 <div class="txt-home col-md-6">
-                    <img src="/Images/about.jpg" alt="apps" />
                     <p>
                         Tentang Kami
                     </p>
@@ -75,6 +76,9 @@
                         Explore History
                     </button>
                 </div>
+                <div class="txt-home col-md-6">
+                    <img src="/Images/about.jpg" alt="apps" />
+                </div>    
                 <div class="col-md-6"></div>
             </div>
         </div>
@@ -91,12 +95,11 @@
                     <h1>Aplikasi Tersedia !</h1>
                     <p>
                         Temukan aplikasi kami dan unduh, Anda dapat
-                        membuat reservaso, memesan makanan, melihat 
+                        membuat reservasi, memesan makanan, melihat 
                         pengiriman Anda di jalan dan banyak lagi.
                     </p>
-                    <button type="button" class="btn btn-primary text-white" onclick="window.location.href='#menu'">
-                        Explore History
-                    </button>
+                    <img src="/Images/app1.png" />
+                    <img src="/Images/app2.png" />
                 </div>
                 <div class="col-md-6"></div>
             </div>
@@ -186,46 +189,47 @@
             <h1>Our Amazing Services</h1>
         </div>    
         <div class="container">
-            <div class="row mt-5 gy-5">
-                <div class="col-md-12 col-lg-4">
-                    <div class="card mb-5">
-                        <img src="/Images/dish.svg" alt="dish">
-                        <div class="card-body">
-                            <h5 class="card-title">Makanan Enak</h5>
-                            <p class="card-text">
-                                Kami menamwarkan layanan berkualitas tinggi kepada klien kami selama 
-                                bertahun-tahun dengan makanan terbaik dan lezat di kota ini.
-                            </p>
+            <div class="bd-example bd-example-row bd-example-row-flex-cols">
+                <div class="container">
+                    <div class="row align-items-start">
+                        <div class="col">
+                            <div class="bd-example">
+                                <div class="" style="width: 18rem;">
+                                    <img src="/Images/dish.svg" alt="" style="margin-left: 100px;margin-top: 70px;">
+                                    <div class="" style="margin-bottom : 50px;">
+                                        <h5 class="card-title">makanan enak</h5>
+                                        <p class="card-text" style="text-align: center;">Kami menawarkan layanan berkualitas tinggi kepada klien kami selama bertahun-tahun, dengan makanan terbaik dan lezat di kota</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-md-12 col-lg-4">
-                    <div class="card mb-5">
-                        <img src="/Images/pizza.svg" alt="pizza">
-                        <div class="card-body">
-                            <h5 class="card-title">Makanan Cepat Saji</h5>
-                            <p class="card-text">
-                                Kami menawarkan layanan berkulitas tinggi kepada klien kami 
-                                selama bertahun-tahun dengan makanan terbaik dan lezat di kota ini.
-                            </p>
+                        <div class="col">
+                            <div class="bd-example">
+                                <div class="" style="width: 18rem;">
+                                    <img src="/Images/pizza.svg" alt="" style="margin-left: 100px;margin-top: 70px;">
+                                    <div class="" style="margin-bottom : 50px;">
+                                        <h5 class="card-title">makanan cepat saji</h5>
+                                        <p class="card-text" style="text-align: center;">Kami menawarkan layanan berkualitas tinggi kepada klien kami selama bertahun-tahun, dengan makanan terbaik dan lezat di kota</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-md-12 col-lg-4">
-                    <div class="card mb-5">
-                        <img src="/Images/truck.svg" alt="truck">
-                        <div class="card-body">
-                            <h5 class="card-title">Pesan Antar</h5>
-                            <p class="card-text">
-                                Kami menawarkan layanan berkualitas tinggi kepada klien kami
-                                selama bertahun-tahun dengan makanan terbaik di kota ini. 
-                            </p>
+                        <div class="col">
+                            <div class="bd-example">
+                                <div class="" style="width: 18rem;">
+                                    <img src="/Images/truck.svg" alt="" style="margin-left: 100px;margin-top: 70px;">
+                                    <div class="" style="margin-bottom : 50px;">
+                                        <h5 class="card-title">Pesan Antar</h5>
+                                        <p class="card-text" style="text-align: center;">Kami menawarkan layanan berkualitas tinggi kepada klien kami selama bertahun-tahun, dengan makanan terbaik dan lezat di kota</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
+    
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
     <!-- Layanan End -->
 
     <!-- Contact Start -->
@@ -233,10 +237,10 @@
         <div class="hero-banner container-fluid p-5 ">
             <div class="row mt-5 gy-5">
                 <div class="txt-home col-md-6">
-                    <h1 >Kontak Kami</h1>
                     <p>
-                        Let's Talk
+                        Kontak Kami
                     </p>
+                    <h1 >Let's Talk</h1>
                     <p>
                         Jika Anda ingin memesan meja di restoran kami,
                         hubungi kami dan kami akan segera melayani Anda layanan obrolan 24/7 kami.
@@ -244,7 +248,7 @@
                 </div>
                 <div class="col-md-6"></div>
                 <div class="text-center">
-                    <button type="button" class="btn btn-primary text-white" onclick="window.location.href='#section'">Send Massage</button>
+                    <button type="button" class="btn btn-primary text-white" onclick="window.location.href='#beranda'">Send Massage</button>
                 </div>    
             </div>
         </div>
